Add changes according to changes required

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="desktop-toptag md:h-8 md:block hidden">
-                <ul class="flex text-white gap-5 justify-end pr-96 items-center pt-1">
+                <ul class="flex text-white gap-5 justify-end md:pr-24 2xl:pr-96 items-center pt-1">
                     <li><a href=""><img class="h-5" src="images/facebook.png" alt="facebook icon"></a></li>
                     <li><a href=""><img class="h-5" src="images/twitter.png" alt="facebook icon"></a></li>
                     <li>English</li>
@@ -22,16 +22,16 @@
                     <li>Logout</li>
                 </ul>
             </div>
-            <div class="md:flex items-center pl-64 hidden bg-white drop-shadow-sm">
-            <a href="index.html"><img src="images/project.png" class="h-20" alt=""></a>
-             <ul class="flex gap-16 ml-72 text-base font-medium">
-                 <li><a href="">About</a></li>
+            <div class="md:flex items-center justify-center hidden bg-white drop-shadow-sm h-16">
+             <a href="#"><img src="images/project.png" class="h-16" alt=""></a>
+             <ul class="flex gap-16 md:ml-20 2xl:ml-72 sm:ml-20 text-base font-medium">
+                 <li><a href="index.html" class="text-brandorange">Home</a></li>
                  <li><a href="">Program</a></li>
                  <li><a href="">Join</a></li>
                  <li><a href="">Sponsor</a></li>
                  <li><a href="">News</a></li>
              </ul>
-             <button type="button" class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
+             <button type="button" class="md:ml-28 border-4 border-brandorange text-brandorange p-2">CC Campaign</button>
           </div>
         </nav>
     </header>
@@ -66,13 +66,13 @@
                   </div>
             <div class="pt-16 flex flex-col items-center text-center">
                 <h2 class="text-2xl md:text-4xl font-normal text-brandorange md:hidden">Hello! Sharing Cardano</h2>
-               <h1 class="md:w-1/3 text-4xl md:text-5xl text-brandorange font-black md:mt-24 md:mb-5">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
+               <h1 class="md:w-1/2 text-4xl md:text-5xl text-brandorange font-black md:mt-24 md:mb-5">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
                <div class="flex justify-center mt-2 md:mb-5">
                 <div class="bg-brandorange h-0.5 w-6"></div>
             </div>
-               <div class="md:w-1/3 md:p-5 head-qout w-80 text-sm mt-5 bg-white p-2 md:mb-5">
+               <div class="md:w-1/2 md:p-5 head-qout w-80 text-sm mt-5 bg-white p-2 md:mb-5">
                 <p class="md:hidden block">Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. </p>   
-                <p class="md:black hidden">Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore animi, quos accusantium doloremque soluta perferendis corrupti! Hic repellat reprehenderit voluptatum harum cupiditate. Aut facere rerum officia tenetur minus cupiditate tempora.</p>
+                <p class="md:block hidden">Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore animi, quos accusantium doloremque soluta perferendis corrupti! Hic repellat reprehenderit voluptatum harum cupiditate. Aut facere rerum officia tenetur minus cupiditate tempora.</p>
                </div>
                <div class="mt-5 md:mb-24">
                    <p class="text-sm text-center mx-5">Please contact us per Email for any further questions about Cardano Student Seminar 2022</p>
@@ -93,7 +93,7 @@
                 <div class="bg-brandorange h-0.5 w-6"></div>
             </div>
             <p class="text-sm text-center mt-5 md:hidden">The logo of CC Global Summit 2022 was decided through the logo competition from 8.Jue to 7.July.</p>
-            <p class="text-sm text-center mt-5 hidden md:block md:w-1/3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam molestiae aut doloremque alias. Voluptas eos ducimus nostrum praesentium quidem odit, non inventore, vero quos sapiente harum, tempore laboriosam nisi dolores.</p>
+            <p class="text-sm text-center mt-5 hidden md:block md:w-1/2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam molestiae aut doloremque alias. Voluptas eos ducimus nostrum praesentium quidem odit, non inventore, vero quos sapiente harum, tempore laboriosam nisi dolores.</p>
             <div class="border-2 border-brandgray m-3 mt-5 md:mb-12">
             <img class="h-36 px-7" src="images/project.png" alt="logo">
         </div>
@@ -140,7 +140,7 @@
     </main>
     <footer class="md:px-5 px-1 pt-8 h-28 md:bg-brandbrown footer md:text-white">
      <div class="flex px-3 gap-3 items-center justify-center md:pl-10 md:gap-60">
-        <h2 class="font-black">Cardano Student Seminar</h2>
+        <h2 class="font-black text-sm md:text-2xl">Cardano Student Seminar</h2>
         <div class="text-sm">
         <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved</p>
     </div>
