--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="desktop-toptag md:h-8 md:block hidden">
-                <ul class="flex text-white gap-5 justify-end md:pr-96 sm:pr-10 items-center pt-1">
+                <ul class="flex text-white gap-5 justify-end md:pr-24 2xl:pr-96 items-center pt-1">
                     <li><a href=""><img class="h-5" src="images/facebook.png" alt="facebook icon"></a></li>
                     <li><a href=""><img class="h-5" src="images/twitter.png" alt="facebook icon"></a></li>
                     <li>English</li>
@@ -22,16 +22,16 @@
                     <li>Logout</li>
                 </ul>
             </div>
-            <div class="md:flex items-center pl-64 hidden bg-white drop-shadow-sm">
-             <a href="#"><img src="images/project.png" class="h-20" alt=""></a>
-             <ul class="flex gap-16 ml-72 text-base font-medium">
+            <div class="md:flex items-center justify-center hidden bg-white drop-shadow-sm h-16">
+             <a href="#"><img src="images/project.png" class="h-16" alt=""></a>
+             <ul class="flex gap-16 md:ml-20 2xl:ml-72 sm:ml-20 text-base font-medium">
                  <li><a href="About.html" class="text-brandorange">About</a></li>
                  <li><a href="">Program</a></li>
                  <li><a href="">Join</a></li>
                  <li><a href="">Sponsor</a></li>
                  <li><a href="">News</a></li>
              </ul>
-             <button type="button" class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
+             <button type="button" class="md:ml-28 border-4 border-brandorange text-brandorange p-2">CC Campaign</button>
           </div>
         </nav>
     </header>
@@ -66,17 +66,17 @@
                   </li>
                 </ul>
               </div>
-            <div class="p-5 md:ml-60 md:pt-40">
-                <h2 class="text-2xl md:text-4xl font-normal text-brandorange ">Hello! Sharing Cardano</h2>
+            <div class="p-5 2xl:ml-60 md:ml-48 md:pt-20">
+                <h2 class="text-2xl md:text-2xl 2xl:text-4xl font-normal text-brandorange ">Hello! Sharing Cardano</h2>
                 <div>
-               <h1 class="bg-clip-text text-transparent bg-[url('images/mainbg.jpg')] bg-cover md:w-1/2 text-4xl md:text-7xl text-brandorange font-black">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
+               <h1 class="bg-clip-text text-transparent bg-[url('images/mainbg.jpg')] bg-cover md:w-1/2  text-4xl md:text-4xl 2xl:text-7xl text-brandorange font-black">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
             </div>
-               <div class="md:text-lg md:w-1/3 head-qout w-80 text-sm mt-5 border-2 border-white p-5">
+               <div class="md:text-sm 2xl:w-1/3 md:w-1/2 head-qout w-80 text-sm mt-5 border-2 border-white p-5">
                    <p>Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event.</p>
                </div>
                <div class="mt-5 head-sub" >
-                   <h2 class="text-2xl md:text-4xl font-black text-brandbrown">2022.10.15(TUH) ~ 16(FRI)</h2>
-                   <p class="md:text-4xl text-brandbrown">@ Addis Ababa University, AAiT</p>
+                   <h2 class="text-2xl 2xl:text-4xl md:text-2xl font-black text-brandbrown">2022.10.15(TUH) ~ 16(FRI)</h2>
+                   <p class="2xl:text-4xl md:text-2xl text-brandbrown">@ Addis Ababa University, AAiT</p>
                </div>
             </div>
             </div>
@@ -140,7 +140,7 @@
             <div class="bg-brandorange h-px w-10"></div>
         </div>
         </div>
-    <div id="speaker" class="">
+    <div id="speaker" class="md:pl-20 2xl:pl-52">
        
     </div>
         <div class="my-8 md:hidden flex justify-center">
@@ -153,11 +153,11 @@
         </div>
         </section>
         <section class="bg-brandbrown text-white text-center md:h-72 h-44 pt-3 hidden md:block" id="partners">
-            <h2 class="text-2xl font-black md:opacity-50 md:pt-14">Partner</h2>
+            <h2 class="text-2xl font-black md:opacity-50 md:pt-12">Partner</h2>
             <div class="flex justify-center mt-2">
                 <div class="bg-brandorange h-px w-10"></div>
             </div>
-            <ul class="flex flex-wrap justify-center m-5 gap-4 md:gap-10 md:pt-6">
+            <ul class="flex flex-wrap justify-center m-3 gap-4 md:gap-10 md:pt-6">
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
@@ -168,8 +168,8 @@
        
     </main>
     <footer class=" bg-brandgray bg-opacity-10 hidden md:block" id="footer">
-    <div class="flex md:px-5 px-3 gap-8 items-center md:justify-center h-28  md:gap-60">
-        <h2 class="font-black md:text-2xl">Cardano Student Seminar</h2>
+    <div class="flex md:px-5 px-2 gap-5 items-center justify-start md:justify-center h-28 md:gap-60">
+        <h2 class="font-black text-sm md:text-2xl">Cardano Student Seminar</h2>
         <div class="text-sm">
         <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved</p>
     </div>
