Add new fix to codebase according to changes required

--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <section class="main-head bg-brandgray bg-opacity-40 md:h-full pb-8 md:pb-2">
-            <div class="bg-[url('images/backpattern.png')] bg-no-repeat bg-contain bg-center">
+            <div class="bg-[url('images/backpattern1.png')] bg-no-repeat bg-contain bg-center">
                 <div class="md:hidden">
                     <img src="images/more.png" class="h-14 p-3" alt="humberger menu" onclick="display()" id="menu">
                     <img
