--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="bg-[url('images/conference.jpg')] bg-no-repeat bg-cover md:h-screen">
             <div class="bg-brandgray bg-opacity-80 md:h-full">
             <div class="bg-gradient-to-t from-white ">
-            <div class="bg-[url('images/backpattern.png')] bg-no-repeat bg-cover bg-center md:h-screen">
+            <div class="bg-[url('images/backpattern1.png')] bg-no-repeat bg-cover bg-center md:h-screen">
             <div class="md:hidden">
                 <img src="images/more.png" class="h-14 p-3" alt="humberger menu" onclick="display()" id="menu">
                 <img
