Add updated fix to codebase according to changes required

--- a/About.html
+++ b/About.html
@@ -142,7 +142,7 @@
      <div class="flex px-3 gap-3 items-center justify-center md:pl-10 md:gap-60">
         <h2 class="font-black text-sm md:text-2xl">Cardano Student Seminar</h2>
         <div class="text-sm">
-        <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved</p>
+        <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved.</p>
     </div>
     </div>
     </footer>
